[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/enemy/owl-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/owl.gd" type="Script" id=2]
[ext_resource path="res://Sounds/sfx/death.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=8]
radius = 24.0

[node name="Owl" type="KinematicBody2D" groups=["Owl"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
frame = 3
playing = true

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2

[node name="hitbox area" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 7 )

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="Position2D" type="Position2D" parent="."]

[node name="meleeRange" type="Area2D" parent="."]

[node name="meleeRange" type="CollisionShape2D" parent="meleeRange"]
shape = SubResource( 8 )

[node name="Health" type="Timer" parent="."]
wait_time = 2.0

[node name="Immunity" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="meleeRange" to="." method="_on_meleeRange_area_entered"]
[connection signal="area_exited" from="meleeRange" to="." method="_on_meleeRange_area_exited"]
